Adicionado marcar entrega como entregue
